<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_instructions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="bit.hillcg2.blackjacktrainer.InstructionsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:text="App functionality:"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="30sp" />

            <TextView
                android:text="@string/app_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/textView6"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="16sp" />

            <TextView
                android:text="@string/app_instructions_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/textView7"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="16sp" />

            <TextView
                android:text="@string/pairs_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/textView15"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="16sp" />

            <TextView
                android:text="@string/payouts_instructions_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:id="@+id/textView8"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="30sp" />

            <TextView
                android:text="@string/blackjack_payouts_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/textView10"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="16sp" />

            <TextView
                android:text="@string/mixed_pair_payout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/textView12"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="16sp" />

            <TextView
                android:text="@string/coloured_pair_payout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/textView13"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="16sp" />

            <TextView
                android:text="@string/perfect_pair_payout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/textView14"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
